--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a class="nav-link active" href="#" id="active">Home</a>
         <a class="nav-link" href="subpages/Resume.html" id="nonactive">Resume</a>
         <a class="nav-link" href="subpages/Skills.html" id="nonactive">Skills</a>
-        <a class="nav-link" href="subpages/contact.html" id="nonactive">Contact</a>
+        <a class="nav-link" href="subpages/Contact.html" id="nonactive">Contact</a>
 
     </nav>
     <section class ="jumbotron" id="jumbo">
@@ -26,7 +26,7 @@
         <div class="row">
             <div align="left" class="col">
 			<p>Contact</p>
-			<a class=" btn btn-outline-light btn-lg" href="subpages/contact.html" role="button"><<</a>
+			<a class=" btn btn-outline-light btn-lg" href="subpages/Contact.html" role="button"><<</a>
             </div>
             <div align= "center" class="col-6">
 				<h2 align="center">About Me</h2>
