fixed broken link

--- a/subpages/Skills.html
+++ b/subpages/Skills.html
@@ -15,7 +15,7 @@
         <a class="nav-link" href="../index.html" id="nonactive">Home</a>
         <a class="nav-link" href="Resume.html" id="nonactive">Resume</a>
         <a class="nav-link active" href="#" id="active">Skills</a>
-        <a class="nav-link" href="contact.html" id="nonactive">Contact</a>
+        <a class="nav-link" href="Contact.html" id="nonactive">Contact</a>
 
     </nav>
 	<section class ="jumbotron" id="jumbo">
@@ -53,7 +53,7 @@
             </div>
             <div align="right" class="col">
 			<p>Contact</p>
-			<a  class=" btn btn-outline-light btn-lg" href="contact.html" role="button">>></a>
+			<a  class=" btn btn-outline-light btn-lg" href="Contact.html" role="button">>></a>
             </div>
         </div>
     </section>
