fixed various issues

--- a/subpages/Contact.html
+++ b/subpages/Contact.html
@@ -33,15 +33,15 @@
 				<!--<h2 align="center">Contact me for:</h2>-->
 				<div id="divxyz">
 					<img src="../img/gmail.png" class="rounded mx-auto d-block" alt="..." id="mail" align="left">
-					<p align="middle"><a href = "mailto:adhunter@cpp.edu" >adhunter@cpp.edu</a></p>
+					<p align="middle"><a href = "mailto:kcnguyen@cpp.edu" >kcnguyen@cpp.edu</a></p>
                 </div>
 				<div id="divxyz">
 					<img src="../img/linkedIn.png" class="rounded mx-auto d-block" alt="..." id="mail" align="left">
-					<p align="middle"><a href=https://www.linkedin.com/in/alexandra-hunter/>https://www.linkedin.com/in/alexandra-hunter/</a></p>
+					<p align="middle"><a href=https://www.linkedin.com/in/kdogkevin/>https://www.linkedin.com/in/kdogkevin/</a></p>
                 </div>
 				<div id="divxyz">
 					<img src="../img/github.png" class="rounded mx-auto d-block" alt="..." id="mail" align="left">
-					<p align="middle"><a href=https://github.com/adhunter1>https://github.com/adhunter1</a></p>
+					<p align="middle"><a href=https://github.com/kdogkevin>https://github.com/kdogkevin</a></p>
                 </div>
 				 </div>
             <div align="right" class="col">
