--- a/subpages/Resume.html
+++ b/subpages/Resume.html
@@ -8,7 +8,7 @@
         <link rel ="stylesheet" href="../styles.css">
 		
 	<link rel="shortcut icon" href="../img/corn.png" />
-	<title>Alexandra Hunter</title>
+	<title>Kevin Nguyen Resume</title>
 </head>
 <body>
     <nav class ="nav nav-tabs" id="nav">
