--- a/subpages/Skills.html
+++ b/subpages/Skills.html
@@ -8,7 +8,7 @@
         <link rel ="stylesheet" href="../styles.css">
 		
 	<link rel="shortcut icon" href="../img/corn.png" />
-	<title>Alexandra Hunter</title>
+	<title>Kevin Nguyen Skills</title>
 </head>
 <body>
     <nav class ="nav nav-tabs" id="nav">
@@ -36,19 +36,19 @@
 			</div>
 			<h2>Python</h2>
 			<div class="progress">
-				<div class="progress-bar bg-info progress-bar-striped progress-bar-animated" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+				<div class="progress-bar bg-info progress-bar-striped progress-bar-animated" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
 			</div>
-			<h2>C++</h2>
+			<h2>Selenium Web Driver</h2>
 			<div class="progress">
 			<div class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
 			</div>
 			<h2>HTML</h2>
 <div class="progress">
-  <div class="progress-bar text-primary progress-bar-striped progress-bar-animated" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+  <div class="progress-bar text-primary progress-bar-striped progress-bar-animated" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
 			<h2>CSS</h2>
 			<div class="progress">
-  <div class="progress-bar bg-danger progress-bar-striped progress-bar-animated" role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
+  <div class="progress-bar bg-danger progress-bar-striped progress-bar-animated" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
             </div>
             <div align="right" class="col">
