changed size of icons

--- a/subpages/Contact.html
+++ b/subpages/Contact.html
@@ -32,15 +32,15 @@
             <div  class="col-6">
 				<!--<h2 align="center">Contact me for:</h2>-->
 				<div id="divxyz">
-					<img src="../img/gmail.png" class="rounded mx-auto d-block" alt="..." id="mail" align="left" style="size:25%">
+					<img src="../img/gmail.png" class="rounded mx-auto d-block" alt="..." id="mail" align="left" >
 					<p align="middle"><a href = "mailto:kcnguyen@cpp.edu" >kcnguyen@cpp.edu</a></p>
                 </div>
 				<div id="divxyz">
-					<img src="../img/linkedIn.png" class="rounded mx-auto d-block" alt="..." id="linkedin" align="left" style="size:25%">
+					<img src="../img/linkedIn.png" class="rounded mx-auto d-block" alt="..." id="linkedin" align="left">
 					<p align="middle"><a href=https://www.linkedin.com/in/kdogkevin/>https://www.linkedin.com/in/kdogkevin/</a></p>
                 </div>
 				<div id="divxyz">
-					<img src="../img/github.png" class="rounded mx-auto d-block" alt="..." id="github" align="left" style="size:25%">
+					<img src="../img/github.png" class="rounded mx-auto d-block" alt="..." id="github" align="left" >
 					<p align="middle"><a href=https://github.com/kdogkevin>https://github.com/kdogkevin</a></p>
                 </div>
 				 </div>
