changed size of icons

--- a/subpages/Contact.html
+++ b/subpages/Contact.html
@@ -27,7 +27,7 @@
         <div class="row">
             <div align="left" class="col">
 			<p>Skills</p>
-			<a class=" btn btn-outline-light btn-lg" href="Skills.html" role="button"><<</a>
+			<a class=" btn btn-outline-light btn-lg" href="Skills.html" role="button"></a>
             </div>
             <div  class="col-6">
 				<!--<h2 align="center">Contact me for:</h2>-->
