--- a/subpages/Contact.html
+++ b/subpages/Contact.html
@@ -36,11 +36,11 @@
 					<p align="middle"><a href = "mailto:kcnguyen@cpp.edu" >kcnguyen@cpp.edu</a></p>
                 </div>
 				<div id="divxyz">
-					<img src="../img/linkedIn.png" class="rounded mx-auto d-block" alt="..." id="linkedin" align="left">
+					<img src="../img/linkedIn.png" class="rounded mx-auto d-block" alt="..." id="mail" align="left">
 					<p align="middle"><a href=https://www.linkedin.com/in/kdogkevin/>https://www.linkedin.com/in/kdogkevin/</a></p>
                 </div>
 				<div id="divxyz">
-					<img src="../img/github.png" class="rounded mx-auto d-block" alt="..." id="github" align="left" >
+					<img src="../img/github.png" class="rounded mx-auto d-block" alt="..." id="mail" align="left" >
 					<p align="middle"><a href=https://github.com/kdogkevin>https://github.com/kdogkevin</a></p>
                 </div>
 				 </div>
