changed added resume

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel ="stylesheet" href="styles.css">
-	<title>Kevin Nguyen</title>
+	<title>Kevin</title>
 	<link rel="shortcut icon" href="img/corn.png" />
 </head>
 <body> <!--class="p-3 mb-2 bg-warning text-white"-->
@@ -31,6 +31,8 @@
             <div align= "center" class="col-6">
 				<h2 align="center">About Me</h2>
 				<img  align="center" src="img/HeadShot.jpg" class="rounded mx-auto d-block" alt="..." id="me">
+            </div>
+            <div align= "center" class="col-6">
                 <p align="center">Senior At Cal Poly Pomona graduating this december</p>
             </div>
             <div align="right" class="col">
