changed added resume

--- a/subpages/Resume.html
+++ b/subpages/Resume.html
@@ -8,7 +8,7 @@
         <link rel ="stylesheet" href="../styles.css">
 		
 	<link rel="shortcut icon" href="../img/corn.png" />
-	<title>Kevin Nguyen Resume</title>
+	<title>Kevin Nguyen</title>
 </head>
 <body>
     <nav class ="nav nav-tabs" id="nav">
@@ -29,7 +29,7 @@
 			<a class=" btn btn-outline-light btn-lg" href="../index.html" role="button"><<</a>
             </div>
             <div  class="col-6">
-				<a href="../resumeSeptember19(2).pdf">
+				<a href="../Kevin Nguyen resume final.pdf">
 				<img src="../img/resume96.png" class="rounded mx-auto d-block" alt="..."   id="resume" align="middle">
 				</a>
 				</div>
