--- a/subpages/Resume.html
+++ b/subpages/Resume.html
@@ -29,7 +29,7 @@
 			<a class=" btn btn-outline-light btn-lg" href="../index.html" role="button"><<</a>
             </div>
             <div  class="col-6">
-				<a href="../Kevin Nguyen resume final.pdf">
+				<a href="../Kevin_Nguyen_resume_final.pdf">
 				<img src="../img/resume96.png" class="rounded mx-auto d-block" alt="..."   id="resume" align="middle">
 				</a>
 				</div>
