--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
             </div>
             <div align= "center" class="col-6">
 				<h2 align="center">About Me</h2>
-				<img  align="center" src="img/HeadShot.jpg" class="rounded mx-auto d-block" alt="..." id="me">
-            </div>
-            <div align= "center" class="col-6">
+                <img  align="center" src="img/HeadShot.jpg" class="rounded mx-auto d-block" alt="..." id="me">
+                <div>
+                    
+                </div>
                 <p align="center">Senior At Cal Poly Pomona graduating this december</p>
             </div>
             <div align="right" class="col">
