--- a/subpages/Resume.html
+++ b/subpages/Resume.html
@@ -26,13 +26,11 @@
         <div class="row">
             <div align="left" class="col">
 			<p>Home</p>
-			<a class=" btn btn-outline-light btn-lg" href="../index.html" role="button"><<</a>
+			<a class=" btn btn-outline-light btn-lg" href="../index.html" role="button"></a>
             </div>
             <div  class="col-6">
                 <embed src="../Kevin_Nguyen_resume_final.pdf" type="application/pdf" width="100%" height="600px" />
-				<img src="../img/resume96.png" class="rounded mx-auto d-block" alt="..."   id="resume" align="middle">
-				</a>
-				</div>
+			</div>
             <div align="right" class="col">
 			<p>Skills</p>
 			<a  class=" btn btn-outline-light btn-lg" href="Skills.html" role="button">>></a>
