--- a/subpages/Skills.html
+++ b/subpages/Skills.html
@@ -26,7 +26,7 @@
         <div class="row">
             <div align="left" class="col">
 			<p>Resume</p>
-			<a class=" btn btn-outline-light btn-lg" href="Resume.html" role="button"><<</a>
+			<a class=" btn btn-outline-light btn-lg" href="Resume.html" role="button"></a>
             </div>
             <div  class="col-6">
 			<h2>Java</h2>
