removed about me

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 	
         <div class="row">
             <div align="left" class="col">
-			<p>Contact</p>
-			<a class=" btn btn-outline-light btn-lg" href="subpages/Contact.html" role="button"></a>
+            <p>Contact</p>
+            <a class=" btn btn-outline-light btn-lg" href="subpages/Contact.html" role="button"><<</a>
             </div>
             <div align= "center" class="col-6">
                 <img  align="center" src="img/HeadShot.jpg" class="rounded mx-auto d-block" alt="..." id="me">
